# opencode-boilerplate

./: AGENTS.md  DEV.md  README.md  devenv.nix  justfile  pyproject.toml
boilerplate_app/: cli.py
